# jarvis

./: .env.example  .gitignore  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.ipynb
langchain-server/: Dockerfile  requirements.txt
langchain-server/app/: core.py  dependencies.py  main.py  memory.py
mcp-server/: Dockerfile.dev  package-lock.json  package.json
mcp-server/src/app/api/cli/: route.ts
mcp-server/src/app/api/mcp/search/: route.ts
mcp-server/src/mcp/: browser.ts
src/: config.py
src/agents/: assistant_agent.py  calendar_agent.py  contact_agent.py  email_agent.py  expense_agent.py  jarvis_personality.py
src/utils/: telegram_handler.py  text_to_speech.py  voice_handler.py
